--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Базовая разметка HTML</title>
 </head>
 <body>
-  <h1>Code Basics</h1>
-  <p>Яндекс Практикум</p>
+  <h1>Яндекс Практикум</h1>
+  <p>Дарина Данилова</p>
 </body>
 </html>
